# lang-tlh

./: .glottologid.txt  AUTHORS  CITATION.cff  LICENCE  Links.md  Makefile.am  README  README.markdown  README.md  WhatIsThis.jspwiki  _config.yml  adjectives-affixes-fst-src.md  adjectives-affixes.md  adjectives-stems-fst-src.md  adverbs-stems-fst-src.md  adverbs-stems.md  autogen.sh  configure.ac  conjunctions-stems-fst-src.md  conjunctions-stems.md  functions-cg3-src.md  giella-tlh.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  interjections-stems-fst-src.md  language-map.md  lemmacount.json  manifest.toml  manifest.toml.in  nouns-affixes-fst-src.md  nouns-affixes.md  nouns-stems.md  numerals-stems-fst-src.md  numerals-stems.md  phonology-fst-src.md  prefixes-stems-fst-src.md  pronouns-stems-fst-src.md  pronouns-stems.md  propernouns-affixes.md  (+55 more)
.gut/: delta.toml  manifest.toml
am-shared/: topdir-include.am  uppercase-include.am
devtools/: test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh
doc/: KlingonDocumentation.jspwiki  Links.jspwiki  Makefile.am  WhatIsThis.jspwiki  index.xml  preamble.jspwiki  root-morphology.jspwiki  tlh-phon-phonology.jspwiki  tlh.jspwiki
docs/: Links.jspwiki  (+7 more)
src/morphology/: Makefile.am  root.lexc
src/morphology/affixes/: nouns.lexc  propernouns.lexc
src/morphology/inflection/: nouns.lexc  verbs.lexc
src/morphology/roots/: pronouns.lexc
src/morphology/stems/: adjectives.lexc  adverbs.lexc  conjunctions.lexc  interjections.lexc  nouns.lexc  numerals.lexc  prefixes.lexc  verbs.lexc
(+53 files in other folders)
